# cad_projects

./: .gitattributes  .gitignore  README.md
python/license_management/: .gitignore  README.md  development_process.md  pyproject.toml
python/license_management/data/: license_management.sqlite3
python/license_management/docs/: M07_RELEASE_READINESS_SUMMARY.md  OPS_RUNBOOK.md  RELEASE_NOTES_v0.1.0.md  USER_GUIDE.md  provider_option_config.md  source-code-tour-30min.md
python/license_management/modules/: README.md  SOFTWARE_DESIGN_AUDIT_CHECKLIST.md
python/license_management/modules/M01/: M01_T1.1_scope_boundary_baseline_v0.1.md  M01_T1.1_scope_boundary_template.md  M01_T1.2_measurable_targets_v0.1.md  M01_T1.3_ui_interaction_draft_v0.2.md  M01_T1.4_baseline_review_signoff_package_v0.1.md  M01_requirements_baseline_and_design.md
python/license_management/modules/M02/: M02_T2.1_runtime_stack_and_compatibility_v0.1.md  M02_T2.2_layered_architecture_and_ownership_v0.1.md  M02_T2.3_schema_constraints_and_migration_v0.1.md  M02_T2.4_logging_errorcode_and_exception_taxonomy_v0.1.md  M02_architecture_and_technology.md
python/license_management/modules/M03/: M03_T3.1_python_env_and_lock_v0.1.md  M03_T3.2_project_structure_bootstrap_v0.1.md  M03_T3.3_quality_tooling_baseline_v0.1.md  M03_T3.4_ci_pipeline_baseline_v0.1.md  M03_environment_and_ci_initialization.md
python/license_management/modules/M04/: M04_T4.1_repository_crud_and_query_v0.1.md  M04_T4.2_migration_and_versioning_v0.1.md  M04_T4.3_backup_restore_and_rollback_v0.1.md  M04_data_layer_and_domain.md
python/license_management/modules/M05/: M05_T5.1_import_pipeline_single_batch_v0.1.md  M05_T5.2_validation_dedup_and_report_v0.1.md  M05_T5.3_expiration_state_engine_v0.1.md  M05_T5.4_flexnet_adapter_ssh_startstop_v0.1.md  M05_T5.5_cross_target_compare_service_v0.1.md  M05_business_service_and_provider_adapter.md
python/license_management/modules/M06/: M06_T6.1_main_list_search_status_ui_v0.1.md  M06_T6.2_dialog_set_and_flow_binding_v0.1.md  M06_T6.3_validation_and_feedback_integration_v0.1.md  M06_T6.4_feature_search_ui_v0.1.md  M06_gui_and_interaction_integration.md
python/license_management/modules/M07/: M07_T7.1_unit_integration_e2e_plan_v0.1.md  M07_T7.2_windows_compatibility_validation_v0.1.md  M07_T7.3_stability_and_capacity_resilience_v0.1.md  M07_T7.4_defect_closure_and_regression_v0.1.md  M07_testing_and_quality_closure.md
python/license_management/modules/M08/: M08_T8.1_packaging_pipeline_v0.1.md  M08_T8.2_clean_machine_install_validation_v0.1.md  M08_T8.3_user_and_ops_docs_delivery_v0.1.md  M08_T8.4_release_notes_and_publish_v0.1.md  M08_packaging_release_and_documentation.md
python/license_management/modules/M09/: M09_T9.1_ops_telemetry_and_issue_triage_v0.1.md  M09_T9.2_iteration_backlog_management_v0.1.md  M09_T9.3_dependency_security_review_cycle_v0.1.md  M09_operations_monitoring_and_iteration.md
python/license_management/src/license_management/: __main__.py
python/license_management/tests/: test_smoke.py
python/license_management/tests/e2e/: README.md  test_core_user_journey.py  test_regression_gate.py  test_search_filter_matrix.py
python/license_management/tests/integration/: test_backlog_management.py  (+9 more)
(+159 files in other folders)
