[project]
name = "license-management"
version = "0.1.0"
description = "Desktop GUI license management software"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "PyQt5==5.15.10",
  "PyQt5-Qt5==5.15.2",
  "openpyxl>=3.1.5",
]

[project.scripts]
license-management = "license_management.__main__:main"

[dependency-groups]
dev = [
  "black>=24.10.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "src/license_management/__main__.py",
  "src/license_management/gui/qt_app.py",
  "src/license_management/gui/qt_compat.py",
]
